refactor MCP service
